# Regression_ML_EndtoEnd

./: .gitignore  Dockerfile.streamlit  README.md  app.py  makefile  pyproject.toml
.github/workflows/: ci.yml
data/processed/: cleaning_eval.csv  feature_engineered_eval.csv  feature_engineered_holdout.csv  feature_engineered_train.csv
data/raw/: holdout.csv  train.csv
models/: target_encoder.pkl  xgb_model.pkl
notebooks/: demo_fish_prediction.ipynb
src/api/: main.py
src/feature_pipeline/: feature_engineering.py  load.py  preprocess.py
src/inference_pipeline/: inference.py
src/training_pipeline/: train.py  tune.py
tests/: data_quality.py  test_api.py
