[project]
name = "fish-weight-prediction"
version = "0.1.0"
description = "Fish Weight Prediction End-to-End MLOps Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "category-encoders>=2.6.3",
    "evidently>=0.4.0",
    "fastapi>=0.109.0",
    "joblib>=1.3.2",
    "lightgbm>=4.0.0",
    "matplotlib>=3.8.0",
    "mlflow>=2.10.0",
    "nbformat>=5.9.2",
    "numpy>=1.26.0",
    "optuna>=3.5.0",
    "pandas>=2.1.0",
    "polars>=0.20.0",
    "requests>=2.31.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "streamlit>=1.30.0",
    "uvicorn>=0.27.0",
    "xgboost>=2.0.0",
]

# Nova sintaxe para dependências de desenvolvimento (remove o warning)
[dependency-groups]
dev = [
    "httpx>=0.26.0",
    "pytest>=8.0.0",
]

# Configurações de build do UV
[tool.uv]
package = true
